--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on: workflow_dispatch
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: sap-samples/tech-bytes-kyma-cicd
+  IMAGE_NAME: hbrahi1/cicddemo
 
 jobs:
   deploy-to-dev:
