--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,4 +42,4 @@ jobs:
       - uses: steebchen/kubectl@v2.0.0
         with:
           config: ${{ secrets.DEV_KUBECONFIG }}
-          command: apply -n tutorial -f ./k8s/dev_deployment.yaml
+          command: apply -n default -f ./k8s/dev_deployment.yaml
