--- a/k8s/dev_deployment.yaml
+++ b/k8s/dev_deployment.yaml
@@ -14,7 +14,7 @@ spec:
         version: v1
     spec:
       containers:
-        - image: ghcr.io/hbrahi1/cicddemo.git:latest
+        - image: ghcr.io/hbrahi1/cicddemo:latest
           imagePullPolicy: Always
           name: tech-bytes
           ports:
