--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -81,7 +81,7 @@ jobs:
         uses: steebchen/kubectl@v2.0.0
         with:
           config: ${{ secrets.DEV_KUBECONFIG }}
-          command: -n default set image deployment/demo-app demo-app=${{needs.build-and-push-image.outputs.image-tag }}
+          command: -n default set image hbrahi1/cicddemo cicddemo=${{needs.build-and-push-image.outputs.image-tag }}
 
   create-release:
     needs: build-and-push-image
